--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "evertapped",
   "version": "1.0.0",
-  "description": "",
+  "description": "evertapped app",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/crowlebf/EverTapped/issues"
   },
-  "homepage": "https://github.com/crowlebf/EverTapped#readme"
+  "homepage": "https://github.com/crowlebf/EverTapped#readme",
+  "devDependencies": {
+    "body-parser": "^1.16.0",
+    "express": "^4.14.1",
+    "mongoose": "^4.8.1",
+    "vue": "^2.1.10",
+    "vue-resource": "^1.1.2"
+  },
+  "dependencies": {
+    "request": "^2.79.0"
+  }
 }
